[tool.coverage.run]
branch = true
source = ['wxthumnailctrl']

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'if (typing.)?TYPE_CHECKING:',
    'if __name__ == .__main__.:',
    '\.\.\.',
]

[tool.pytest.ini_options]
testpaths = ['tests']
addopts = "--cov --cov-report term --cov-report=html --cov-report=xml"

[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
package-dir = {"wxthumbnailctrl" = "thumbnailctrl"}

[tool.setuptools.dynamic]
version = {attr = 'thumbnailctrl.__version__'}

[project]
name = 'wxthumbnailctrl'
dynamic = ['version']
authors = [
    { name = 'lojack5' },
]
description = "A scrollable and customizable thumbnail viewer for wxPython."
readme = 'README.md'
license = { text = 'BSD 3-Clause' }
requires-python = '>=3.11'
dependencies = [
    'wxPython>=4.2',
    'humanize>=4.6',
]
classifiers = [
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: Implementation :: CPython',
    'License :: OSI Approved :: BSD License',
    'Operating System :: Microsoft :: Windows',
    'Typing :: Typed',
]

[project.urls]
'Homepage' = 'https://github.com/lojack5/wxthumbnailctrl'
'Bug Tracker' = 'https://github.com/lojack5/wxthumbnailctrl/issues'

[tool.black]
skip-string-normalization = true

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203']
per-file-ignores = [
    # F401: Imported but unused
    # F403: Star import used
    '__init__.py: F403, F401',
]

[tool.isort]
profile = 'black'
